# oersnip

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  snippet_handler.py
environments/: __init__.py
oersnip/: __init__.py  __main__.py  main.py  snippet_handler.py
oersnip/environments/: __init__.py  clipboard.py  datetime.py  environ.py
oersnip/snippets/: example.yml
oersnip/utils/: __init__.py  win.py
oersnip/widgets/: __init__.py  flow_layout.py  snippet_widget.py
snippets/: example.yml
tests/: test_oersnip.py
utils/: __init__.py
