[tool.poetry]
name = "oersnip"
version = "0.1.0"
description = ""
authors = ["laundmo <laurinschmidt2001@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/laundmo/oersnip"

[tool.poetry.dependencies]
python = ">3.6.1, <3.10"
PySide6 = "^6.1.3"
pynput = "^1.7.3"
pyperclip = "^1.8.2"
rapidfuzz = "^1.6.1"
pywin32 = { version = "^301", markers = "sys_platform == 'win32'" }
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.15.0"
prospector = "^1.5.0"

[tool.poetry.scripts]
oersnip = "oersnip:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
